--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			        <span class="position">WEB Student Junior</span>
 			        <adres class="about-adres">Начинающий web мастер, занимаюсь front-ent</adres>
 			        <div class="about-contacs">
-			            <a href="tel:+79012726951" class="about-link"><b>Telephone</b>: 8 (901) 272 69 51</a>
+			            <a href="tel:+79012726951" class="about-link"><b>Telephone</b>: </a>
 			            <a href="mailto:sempahtusov@gmail.com" class="about-link"><b>Gmail</b>:sempahtusov@gmail.com</a>
 			            <a href="https://vk.com/semechkakaktusov" class="about-link"><b>VK</b>:https://vk.com/semechkakaktusov</a>
 			        </div>
