--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				    </div>
 				    <div class="contact">
 				        <h3 class="phone"><i class="fa-solid fa-envelope"></i> Электронная Почта:</h3>
-				        <a href="mailto:sempahtusov@gmail.com" class="link-number">sempahtsuov@gmail.com</a>
+				        <a href="mailto:sempahtusov@gmail.com" class="link-number"></a>
 				    </div>
 				    <div class="contact">
 				        <h3 class="phone">
