--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="contacts">
 				    <div class="contact">
 				        <h3 class="phone"><i class="fa-solid fa-phone"></i> Телефон:</h3>
-				        <a href="tel:+79012726951" class="link-number">8 (901) 272 69 51</a>
+				        <a href="tel:+79012726951" class="link-number"></a>
 				    </div>
 				    <div class="contact">
 				        <h3 class="phone">
